Closed
Bug 1310305
Opened 9 years ago
Closed 9 years ago
Crash in nr_stun_message_has_attribute
Categories
(Core :: WebRTC: Networking, defect, P2)
Tracking
()
RESOLVED
FIXED
mozilla52
| backlog | webrtc/webaudio+ |
People
(Reporter: bwc, Assigned: drno)
Details
(Keywords: crash)
Crash Data
Attachments
(1 file)
This bug was filed from the Socorro interface and is
report bp-b0f7240f-452d-4094-b187-2a3bc2161008.
=============================================================
Looks like a nullptr crash due to |res| here: https://hg.mozilla.org/releases/mozilla-release/annotate/2d931a5eaf8a/media/mtransport/third_party/nICEr/src/stun/stun_server_ctx.c#l347
Should be an easy fix.
| Assignee | ||
Updated•9 years ago
|
Assignee: nobody → drno
| Assignee | ||
Updated•9 years ago
|
backlog: --- → webrtc/webaudio+
Rank: 25
Priority: -- → P2
| Comment hidden (mozreview-request) |
Comment 2•9 years ago
|
||
| mozreview-review | ||
Comment on attachment 8801318 [details]
Bug 1310305: skip responding when failed to parse STUN message.
https://reviewboard.mozilla.org/r/86106/#review85040
Looks good to me.
Attachment #8801318 -
Flags: review?(mfroman) → review+
Pushed by drno@ohlmeier.org:
https://hg.mozilla.org/integration/autoland/rev/08995043f1a6
skip responding when failed to parse STUN message. r=mjf
Comment 4•9 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 9 years ago
status-firefox52:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla52
Updated•9 years ago
|
status-firefox50:
--- → affected
status-firefox51:
--- → affected
| Assignee | ||
Comment 5•9 years ago
|
||
Thanks Marco.
Since I only see 22 crashes since beginning of August I think we could simply let this ride the trains. The only one which concerns me a little bit is that ESR is affected.
status-firefox-esr45:
--- → affected
You need to log in
before you can comment on or make changes to this bug.
Description
•