Bug 1310305: skip responding when failed to parse STUN message. r=mjf

MozReview-Commit-ID: D9Ox0nt81bF